Style header and top content

--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Things</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div class="header">
-        <h1>Things and</h1>
+        <h1>Things and Non Things</h1>
         <ul>
-            <li>about</li>
-            <li>chapters</li>
-            <li>gallery</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Chapters</a></li>
+            <li><a href="#">Gallery</a></li>
         </ul>
     </div>
     <div class="main">
-        <h1>The Door</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur doloribus laboriosam explicabo, nobis expedita quae, inventore, vel quia temporibus commodi vitae est libero earum quam voluptatibus eum! Beatae, maiores quo!</p>
-        <button>Learn More</button>
-        <img src="" alt="a cupboard">
+        <div class="content">
+            <h1>The Door</h1>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur doloribus laboriosam explicabo,
+            nobis expedita quae, inventore, vel quia temporibus commodi vitae est libero earum quam voluptatibus
+            eum! Beatae, maiores quo!
+            <button>Learn More</button>
+        </div>
+        <img src="./images/door.png" alt="a cupboard">
     </div>
     <div class="cards">
         <h1>Characters</h1>
@@ -42,7 +49,7 @@
     <div class="quote">
         <p>"I like to wear soft clothing cuz it makes me feel like I'm rough in comparison."</p>
         <p>- bill wurtz</p>
-    </div> 
+    </div>
     <div class="signup">
         <p>Call to action!</p>
         <p>Sign up to the things and peoples newsletter</p>
@@ -52,4 +59,5 @@
         Copyright © A.R. Assad 2023
     </div>
 </body>
+
 </html>
