Style cards and quote section

--- a/index.html
+++ b/index.html
@@ -27,28 +27,32 @@
         </div>
         <img src="./images/door.png" alt="a cupboard">
     </div>
+    <h1 class = "title">Characters</h1>
     <div class="cards">
-        <h1>Characters</h1>
         <div class="card">
-            <img src="" alt="Peaceman">
-            Peaceman: A potato connoisseur.
+            <b>Peaceman</b>
+            <img src="./images/peaceman.png" alt="Peaceman">
+            A potato connoisseur.
         </div>
         <div class="card">
-            <img src="" alt="Aworto">
-            Aworto: A golem craftsman.
+            <b>Aworto</b>
+            <img src="./images/aworto.png" alt="Aworto">
+            A golem craftsman.
         </div>
         <div class="card">
-            <img src="" alt="Barood Khan">
-            Barood: A bus tender.
+            <b>Barood</b>
+            <img src="./images/barood.png" alt="Barood Khan">
+            A bus tender.
         </div>
         <div class="card">
-            <img src="" alt="Salvador">
-            Salvador: A spacetime operator
+            <b>Salvador</b>
+            <img src="./images/salvador.png" alt="Salvador">
+            A spacetime operator
         </div>
     </div>
     <div class="quote">
-        <p>"I like to wear soft clothing cuz it makes me feel like I'm rough in comparison."</p>
-        <p>- bill wurtz</p>
+        "I like to wear soft clothing cuz it makes me feel like I'm rough in comparison."
+        <div class="quoter">- bill wurtz</div>
     </div>
     <div class="signup">
         <p>Call to action!</p>
