Style the sign up modal and the footer

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
         <div class="quoter">- bill wurtz</div>
     </div>
     <div class="signup">
-        <p>Call to action!</p>
-        <p>Sign up to the things and peoples newsletter</p>
+        <div class="signtext">
+        <div class="quoter">Call to action!</div>
+        Sign up to the things and peoples newsletter
+        </div>
         <button>Sign up</button>
     </div>
     <div class="footer">
