Edit text and descriptions

--- a/index.html
+++ b/index.html
@@ -20,34 +20,34 @@
     <div class="main">
         <div class="content">
             <h1>The Door</h1>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur doloribus laboriosam explicabo,
-            nobis expedita quae, inventore, vel quia temporibus commodi vitae est libero earum quam voluptatibus
-            eum! Beatae, maiores quo!
+            The gateway to the light world.It was opened when the royal scientist left glowing tompel stones, which
+            later turned out to be blue matter, in his cupboard. It connects the forests of Lumia and Oscuria, breaking
+            the barrier between the two worlds...
             <button>Learn More</button>
         </div>
         <img src="./images/door.png" alt="a cupboard">
     </div>
-    <h1 class = "title">Characters</h1>
+    <h1 class="title">Characters</h1>
     <div class="cards">
         <div class="card">
             <b>Peaceman</b>
             <img src="./images/peaceman.png" alt="Peaceman">
-            A potato connoisseur.
+            A potato connoisseur. An avid adventurer and advocate of peace.
         </div>
         <div class="card">
             <b>Aworto</b>
             <img src="./images/aworto.png" alt="Aworto">
-            A golem craftsman.
+            A golem craftsman. Designs machines and robots in his cabin.
         </div>
         <div class="card">
             <b>Barood</b>
             <img src="./images/barood.png" alt="Barood Khan">
-            A bus tender.
+            A bus tender. Drives his bus, although rarely on the road.
         </div>
         <div class="card">
             <b>Salvador</b>
             <img src="./images/salvador.png" alt="Salvador">
-            A spacetime operator
+            A spacetime operator. Speaks nonsense most of the time.
         </div>
     </div>
     <div class="quote">
@@ -56,8 +56,8 @@
     </div>
     <div class="signup">
         <div class="signtext">
-        <div class="quoter">Call to action!</div>
-        Sign up to the things and peoples newsletter
+            <div class="quoter">Call to nothing!</div>
+            Sign up to the things and non things newsletter. Although the buttons do nothing.
         </div>
         <button>Sign up</button>
     </div>
