Add link to barood's bus service

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="card">
             <b>Barood</b>
             <img src="./images/barood.png" alt="Barood Khan">
-            A bus tender. Drives his bus, although rarely on the road.
+            <div>A <a href="https://ar-assad.github.io/barood-pickndrop/" class="baroodlink">bus tender</a>. Drives his bus, although rarely on the road.</div>
         </div>
         <div class="card">
             <b>Salvador</b>
